# rgz

./: CMakeLists.txt  main.cpp  main.h  rgz_one_file.cpp  start.sh
src/: config.h  config.hpp
src/io/: io.cpp  io.h  io.hpp
src/num/: num.cpp  num.h  num.hpp
src/operations/: choose_operation.cpp  choose_operation.h  choose_operation.hpp  compare.cpp  compare.h  divide.cpp  divide.h  divide.hpp  multiply.cpp  multiply.h  multiply.hpp  operations.cpp  operations.h  sum.cpp  sum.h  sum.hpp
src/str/: str.cpp  str.h  str.hpp
src/translate/: translate.cpp  translate.h  translate.hpp
